--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,6 @@ target/
 
 ### IntelliJ IDEA ###
 .idea/
-.idea/workspace.xml
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
 *.iws
 *.iml
 *.ipr
@@ -41,4 +36,4 @@ build/
 
 ### Logs ###
 .log
-pushed.sh
+release.properties
